--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <a style="font-size: x-large;" href="./Zombies/zombies.html">Zombies Guides</a>
                 <h4>(WIP) A javascript based website that gives a comprehensive guide to multiple zombie maps in Call of Duty: Zombies.</p>
                 </fieldset>
+                <fieldset class="space">   
+                    <a style="font-size: x-large;" href="./f1-picker.html">F1 Podium Picker</a>
+                    <h4>Pick F1 Podiums for each race!</p>
+                </fieldset>
             </div>
         </div>
     </body>
