--- a/admin-login.html
+++ b/admin-login.html
@@ -5,37 +5,33 @@
         <title>F1 Picker - Admin Login</title>
         <link rel="stylesheet" href="f1-picker.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Add Font Awesome for icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
     <body>
-        <div>
-            <h1>F1 Picker Admin</h1>
-            <nav>
-                <a href="index.html">Back to Home</a>
-            </nav>
-            <hr>
-            <div class="standings">
-                <div class="admin-form">
-                    <h2>Admin Login</h2>
-                    <form id="login-form">
-                        <div class="form-group">
-                            <label for="username">Username:</label>
-                            <input type="text" id="username" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="password" id="password" required>
-                        </div>
-                        <button type="submit">Login</button>
-                    </form>
-                    <p id="error-message" class="error-message"></p>
-                </div>
+        <div class="admin-login">
+            <div class="login-container">
+                <h1><i class="fas fa-flag-checkered"></i> F1 Picker Admin</h1>
+                <form id="login-form" class="admin-form">
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" required>
+                    </div>
+                    <button type="submit" class="btn-primary">
+                        <i class="fas fa-sign-in-alt"></i> Login
+                    </button>
+                </form>
+                <div id="error-message" class="error-message"></div>
             </div>
         </div>
         <script type="module">
             // Import the functions you need from the SDKs you need
             import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-            import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
-            import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+            import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
 
             // Your web app's Firebase configuration
             const firebaseConfig = {
@@ -45,30 +41,39 @@
                 storageBucket: "f1-podium.firebasestorage.app",
                 messagingSenderId: "435127757273",
                 appId: "1:435127757273:web:e94e296086c476fc13d1c8",
-                measurementId: "G-BEC5SYS6K3"
+                measurementId: "G-BEC5SYS6K3",
+                databaseURL: "https://f1-podium-default-rtdb.firebaseio.com"
             };
 
             // Initialize Firebase
             const app = initializeApp(firebaseConfig);
-            const analytics = getAnalytics(app);
             const auth = getAuth(app);
 
-            // Make auth available globally
-            window.auth = auth;
-            window.signInWithEmailAndPassword = signInWithEmailAndPassword;
+            // Check if user is already logged in
+            onAuthStateChanged(auth, (user) => {
+                if (user) {
+                    window.location.href = 'admin-dashboard.html';
+                }
+            });
 
+            // Handle login form submission
             document.getElementById('login-form').addEventListener('submit', async (e) => {
                 e.preventDefault();
-                const username = document.getElementById('username').value;
+                const email = document.getElementById('email').value;
                 const password = document.getElementById('password').value;
                 const errorMessage = document.getElementById('error-message');
+                const submitButton = e.target.querySelector('button[type="submit"]');
 
                 try {
-                    await signInWithEmailAndPassword(auth, username, password);
+                    submitButton.classList.add('loading');
+                    await signInWithEmailAndPassword(auth, email, password);
                     window.location.href = 'admin-dashboard.html';
                 } catch (error) {
-                    errorMessage.textContent = 'Invalid credentials. Please try again.';
                     console.error('Login error:', error);
+                    errorMessage.textContent = 'Invalid email or password';
+                    errorMessage.style.display = 'block';
+                } finally {
+                    submitButton.classList.remove('loading');
                 }
             });
         </script>
