--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -5,46 +5,136 @@
         <title>F1 Picker - Admin Dashboard</title>
         <link rel="stylesheet" href="f1-picker.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Add Font Awesome for icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
     <body>
         <div class="admin-dashboard">
-            <header>
-                <h1>F1 Picker Admin Dashboard</h1>
-                <button id="logout-button">Logout</button>
+            <header class="admin-header">
+                <div class="header-content">
+                    <h1><i class="fas fa-flag-checkered"></i> F1 Picker Admin</h1>
+                    <button id="logout-button" class="logout-btn">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </button>
+                </div>
             </header>
 
             <div class="admin-content">
-                <section class="results-section">
-                    <h2>Race Results</h2>
-                    <div class="form-group">
-                        <label for="admin-race-select">Select Race:</label>
-                        <select id="admin-race-select"></select>
-                    </div>
-                    <div class="form-group">
-                        <label for="admin-first-place">1st Place:</label>
-                        <select id="admin-first-place"></select>
-                    </div>
-                    <div class="form-group">
-                        <label for="admin-second-place">2nd Place:</label>
-                        <select id="admin-second-place"></select>
-                    </div>
-                    <div class="form-group">
-                        <label for="admin-third-place">3rd Place:</label>
-                        <select id="admin-third-place"></select>
-                    </div>
-                    <button id="save-results">Save Results</button>
-                </section>
+                <div class="admin-grid">
+                    <section class="results-section card">
+                        <div class="card-header">
+                            <h2><i class="fas fa-trophy"></i> Race Results</h2>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label for="admin-race-select">Select Race:</label>
+                                <select id="admin-race-select" class="form-control">
+                                    <option value="">Choose a race...</option>
+                                </select>
+                            </div>
+                            <div class="podium-inputs">
+                                <div class="form-group">
+                                    <label for="admin-first-place">
+                                        <i class="fas fa-medal" style="color: gold;"></i> 1st Place:
+                                    </label>
+                                    <select id="admin-first-place" class="form-control">
+                                        <option value="">Select driver...</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="admin-second-place">
+                                        <i class="fas fa-medal" style="color: silver;"></i> 2nd Place:
+                                    </label>
+                                    <select id="admin-second-place" class="form-control">
+                                        <option value="">Select driver...</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="admin-third-place">
+                                        <i class="fas fa-medal" style="color: #cd7f32;"></i> 3rd Place:
+                                    </label>
+                                    <select id="admin-third-place" class="form-control">
+                                        <option value="">Select driver...</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <button id="save-results" class="btn-primary">
+                                <i class="fas fa-save"></i> Save Results
+                            </button>
+                        </div>
+                    </section>
 
-                <section class="submissions-section">
-                    <h2>User Submissions</h2>
-                    <div id="submissions-list"></div>
-                </section>
+                    <section class="submissions-section card">
+                        <div class="card-header">
+                            <h2><i class="fas fa-users"></i> User Submissions</h2>
+                        </div>
+                        <div class="card-body">
+                            <div id="submissions-list" class="submissions-grid"></div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
+
+        <!-- F1 Data -->
+        <script>
+            // F1 2024 Races Data
+            const F1_2024_RACES = [
+                { id: 'bahrain', name: 'Bahrain Grand Prix' },
+                { id: 'saudi', name: 'Saudi Arabian Grand Prix' },
+                { id: 'australia', name: 'Australian Grand Prix' },
+                { id: 'japan', name: 'Japanese Grand Prix' },
+                { id: 'china', name: 'Chinese Grand Prix' },
+                { id: 'miami', name: 'Miami Grand Prix' },
+                { id: 'emilia', name: 'Emilia Romagna Grand Prix' },
+                { id: 'monaco', name: 'Monaco Grand Prix' },
+                { id: 'canada', name: 'Canadian Grand Prix' },
+                { id: 'spain', name: 'Spanish Grand Prix' },
+                { id: 'austria', name: 'Austrian Grand Prix' },
+                { id: 'britain', name: 'British Grand Prix' },
+                { id: 'hungary', name: 'Hungarian Grand Prix' },
+                { id: 'belgium', name: 'Belgian Grand Prix' },
+                { id: 'netherlands', name: 'Dutch Grand Prix' },
+                { id: 'italy', name: 'Italian Grand Prix' },
+                { id: 'azerbaijan', name: 'Azerbaijan Grand Prix' },
+                { id: 'singapore', name: 'Singapore Grand Prix' },
+                { id: 'usa', name: 'United States Grand Prix' },
+                { id: 'mexico', name: 'Mexican Grand Prix' },
+                { id: 'brazil', name: 'Brazilian Grand Prix' },
+                { id: 'vegas', name: 'Las Vegas Grand Prix' },
+                { id: 'qatar', name: 'Qatar Grand Prix' },
+                { id: 'abu-dhabi', name: 'Abu Dhabi Grand Prix' }
+            ];
+
+            // F1 2024 Drivers Data
+            const F1_2024_DRIVERS = [
+                { id: 'ver', name: 'Max Verstappen', team: 'Red Bull Racing' },
+                { id: 'per', name: 'Sergio Perez', team: 'Red Bull Racing' },
+                { id: 'ham', name: 'Lewis Hamilton', team: 'Mercedes' },
+                { id: 'rus', name: 'George Russell', team: 'Mercedes' },
+                { id: 'lec', name: 'Charles Leclerc', team: 'Ferrari' },
+                { id: 'sai', name: 'Carlos Sainz', team: 'Ferrari' },
+                { id: 'nor', name: 'Lando Norris', team: 'McLaren' },
+                { id: 'pia', name: 'Oscar Piastri', team: 'McLaren' },
+                { id: 'alo', name: 'Fernando Alonso', team: 'Aston Martin' },
+                { id: 'str', name: 'Lance Stroll', team: 'Aston Martin' },
+                { id: 'gas', name: 'Pierre Gasly', team: 'Alpine' },
+                { id: 'oco', name: 'Esteban Ocon', team: 'Alpine' },
+                { id: 'alb', name: 'Alexander Albon', team: 'Williams' },
+                { id: 'sar', name: 'Logan Sargeant', team: 'Williams' },
+                { id: 'tsu', name: 'Yuki Tsunoda', team: 'RB' },
+                { id: 'ric', name: 'Daniel Ricciardo', team: 'RB' },
+                { id: 'hul', name: 'Nico Hulkenberg', team: 'Haas F1 Team' },
+                { id: 'mag', name: 'Kevin Magnussen', team: 'Haas F1 Team' },
+                { id: 'bot', name: 'Valtteri Bottas', team: 'Kick Sauber' },
+                { id: 'zho', name: 'Guanyu Zhou', team: 'Kick Sauber' }
+            ];
+        </script>
+
         <script type="module">
             // Import the functions you need from the SDKs you need
             import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-            import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
+            import { getDatabase, ref, set, get, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-database.js";
             import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
             import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
 
@@ -56,21 +146,22 @@
                 storageBucket: "f1-podium.firebasestorage.app",
                 messagingSenderId: "435127757273",
                 appId: "1:435127757273:web:e94e296086c476fc13d1c8",
-                measurementId: "G-BEC5SYS6K3"
+                measurementId: "G-BEC5SYS6K3",
+                databaseURL: "https://f1-podium-default-rtdb.firebaseio.com"
             };
 
             // Initialize Firebase
             const app = initializeApp(firebaseConfig);
             const analytics = getAnalytics(app);
-            const db = getFirestore(app);
+            const db = getDatabase(app);
             const auth = getAuth(app);
 
             // Make Firebase services available globally
             window.db = db;
             window.auth = auth;
-            window.doc = doc;
-            window.getDoc = getDoc;
-            window.setDoc = setDoc;
+            window.ref = ref;
+            window.set = set;
+            window.get = get;
             window.serverTimestamp = serverTimestamp;
             window.onAuthStateChanged = onAuthStateChanged;
             window.signOut = signOut;
