--- a/f1-picker.html
+++ b/f1-picker.html
@@ -49,7 +49,7 @@
         <script type="module">
             // Import the functions you need from the SDKs you need
             import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-            import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
+            import { getDatabase, ref, set, get, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-database.js";
             import { getAuth } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
             import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
 
@@ -61,21 +61,22 @@
                 storageBucket: "f1-podium.firebasestorage.app",
                 messagingSenderId: "435127757273",
                 appId: "1:435127757273:web:e94e296086c476fc13d1c8",
-                measurementId: "G-BEC5SYS6K3"
+                measurementId: "G-BEC5SYS6K3",
+                databaseURL: "https://f1-podium-default-rtdb.firebaseio.com" // Add your Realtime Database URL here
             };
 
             // Initialize Firebase
             const app = initializeApp(firebaseConfig);
             const analytics = getAnalytics(app);
-            const db = getFirestore(app);
+            const db = getDatabase(app);
             const auth = getAuth(app);
 
             // Make Firebase services available globally
             window.db = db;
             window.auth = auth;
-            window.doc = doc;
-            window.getDoc = getDoc;
-            window.setDoc = setDoc;
+            window.ref = ref;
+            window.set = set;
+            window.get = get;
             window.serverTimestamp = serverTimestamp;
         </script>
         <script src="f1-picker.js"></script>
