--- a/f1-picker.html
+++ b/f1-picker.html
@@ -1,57 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>F1 Podium Picker</title>
+        <title>F1 Picker</title>
         <link rel="stylesheet" href="f1-picker.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Add Font Awesome for icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
     <body>
-        <div>
-            <h1>F1 Podium Picker</h1>
-            <nav>
-                <a href="index.html">Back to Home</a>
-            </nav>
-            <hr>
-            <div class="standings">
-                <h2>Select Race</h2>
-                <select id="race-select">
-                    <option value="">Choose a race...</option>
-                    <!-- Race options will be populated dynamically -->
+        <div class="standings">
+            <h1><i class="fas fa-flag-checkered"></i> F1 Picker</h1>
+            
+            <div class="form-group">
+                <label for="name-select">Your Name:</label>
+                <select id="name-select" class="form-control">
+                    <option value="Calvin">Calvin</option>
+                    <option value="Ethan">Ethan</option>
                 </select>
+            </div>
 
-                <h2>Pick Your Podium</h2>
-                <div class="podium-picks">
-                    <div class="pick">
-                        <h3>1st Place</h3>
-                        <select id="first-place">
-                            <option value="">Select driver...</option>
-                            <!-- Driver options will be populated dynamically -->
-                        </select>
-                    </div>
-                    <div class="pick">
-                        <h3>2nd Place</h3>
-                        <select id="second-place">
-                            <option value="">Select driver...</option>
-                        </select>
-                    </div>
-                    <div class="pick">
-                        <h3>3rd Place</h3>
-                        <select id="third-place">
-                            <option value="">Select driver...</option>
-                        </select>
-                    </div>
+            <div class="form-group">
+                <label for="race-select">Select Race:</label>
+                <select id="race-select" class="form-control">
+                    <!-- Populated by JavaScript -->
+                </select>
+            </div>
+
+            <div class="podium-picks">
+                <div class="pick">
+                    <h3>1st Place</h3>
+                    <select id="first-place" class="form-control">
+                        <!-- Populated by JavaScript -->
+                    </select>
                 </div>
+                <div class="pick">
+                    <h3>2nd Place</h3>
+                    <select id="second-place" class="form-control">
+                        <!-- Populated by JavaScript -->
+                    </select>
+                </div>
+                <div class="pick">
+                    <h3>3rd Place</h3>
+                    <select id="third-place" class="form-control">
+                        <!-- Populated by JavaScript -->
+                    </select>
+                </div>
+            </div>
 
-                <button id="submit-picks">Submit Picks</button>
+            <button id="submit-picks" class="submit-btn">Submit Picks</button>
+
+            <!-- Submission Board -->
+            <div class="submission-board">
+                <h2>Current Picks</h2>
+                <div class="board-controls">
+                    <select id="board-race-select" class="form-control">
+                        <!-- Populated by JavaScript -->
+                    </select>
+                    <button id="refresh-board" class="refresh-btn">
+                        <i class="fas fa-sync-alt"></i> Refresh
+                    </button>
+                </div>
+                <div class="board-container">
+                    <table id="submissions-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>1st Place</th>
+                                <th>2nd Place</th>
+                                <th>3rd Place</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Populated by JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
+
         <script type="module">
             // Import the functions you need from the SDKs you need
-            import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-            import { getDatabase, ref, set, get, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-database.js";
-            import { getAuth } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-auth.js";
-            import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+            import { getDatabase, ref, set, get, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
 
             // Your web app's Firebase configuration
             const firebaseConfig = {
@@ -62,18 +93,15 @@
                 messagingSenderId: "435127757273",
                 appId: "1:435127757273:web:e94e296086c476fc13d1c8",
                 measurementId: "G-BEC5SYS6K3",
-                databaseURL: "https://f1-podium-default-rtdb.firebaseio.com" // Add your Realtime Database URL here
+                databaseURL: "https://f1-podium-default-rtdb.firebaseio.com"
             };
 
             // Initialize Firebase
             const app = initializeApp(firebaseConfig);
-            const analytics = getAnalytics(app);
             const db = getDatabase(app);
-            const auth = getAuth(app);
 
             // Make Firebase services available globally
             window.db = db;
-            window.auth = auth;
             window.ref = ref;
             window.set = set;
             window.get = get;
