--- a/f1-picker.html
+++ b/f1-picker.html
@@ -10,8 +10,13 @@
     </head>
     <body>
         <div class="standings">
-            <h1><i class="fas fa-flag-checkered"></i> F1 Picker</h1>
+            <h1><i class="fas fa-trophy"></i> F1 Picker</h1>
             
+            <nav>
+                <a href="f1-picker.html" class="active">Make Picks</a>
+                <a href="leaderboard.html">Leaderboard</a>
+            </nav>
+
             <div class="form-group">
                 <label for="name-select">Your Name:</label>
                 <select id="name-select" class="form-control">
