--- a/f1-picker.html
+++ b/f1-picker.html
@@ -82,6 +82,23 @@
                     </table>
                 </div>
             </div>
+
+            <div class="submission-board">
+                <h2>Season Points</h2>
+                <table id="season-points-table">
+                    <thead>
+                        <tr>
+                            <th>Position</th>
+                            <th>Name</th>
+                            <th>Total Points</th>
+                            <th>Perfect Podiums</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Will be populated by JavaScript -->
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <script type="module">
