--- a/leaderboard.html
+++ b/leaderboard.html
@@ -18,21 +18,7 @@
             </nav>
 
             <div class="leaderboard-container">
-                <div class="leaderboard-content">
-                    <table id="leaderboard-table">
-                        <thead>
-                            <tr>
-                                <th>Position</th>
-                                <th>Name</th>
-                                <th>Total Points</th>
-                                <th>Perfect Podiums</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Will be populated by JavaScript -->
-                        </tbody>
-                    </table>
-                </div>
+                <!-- Content will be added here -->
             </div>
         </div>
 
