--- a/f1-picker.html
+++ b/f1-picker.html
@@ -73,6 +73,7 @@
                                 <th>1st Place</th>
                                 <th>2nd Place</th>
                                 <th>3rd Place</th>
+                                <th>Points</th>
                             </tr>
                         </thead>
                         <tbody>
