--- a/f1-picker.html
+++ b/f1-picker.html
@@ -66,6 +66,12 @@
                     </button>
                 </div>
                 <div class="board-container">
+                    <div class="results-section">
+                        <h3>Race Results</h3>
+                        <div id="race-results" class="race-results">
+                            <!-- Will be populated by JavaScript -->
+                        </div>
+                    </div>
                     <table id="submissions-table">
                         <thead>
                             <tr>
