rework names for picker

--- a/projects/f1-picker/f1-picker.html
+++ b/projects/f1-picker/f1-picker.html
@@ -17,11 +17,8 @@
             </nav>
 
             <div class="form-group">
-                <label for="name-select">Your Name:</label>
-                <select id="name-select" class="form-control">
-                    <option value="Calvin">Calvin</option>
-                    <option value="Ethan">Ethan</option>
-                </select>
+                <label for="name-input">Your Name:</label>
+                <input id="name-input" class="form-control" type="text" placeholder="Type your name" autocomplete="name" />
             </div>
 
             <div class="form-group">
